--- a/build-extras.gradle
+++ b/build-extras.gradle
@@ -3,11 +3,12 @@ ext.cdvMinSdkVersion=24
 android {
     defaultConfig {
         minSdkVersion 24
-        targetSdkVersion 30
+        targetSdkVersion 26
 
         ndk {
-            abiFilters "armeabi-v7a"
+            abiFilters "x86"
         }
     }
 }
 
+// abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
