--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "GPL-2.0+",
   "dependencies": {
     "cordova-android": "^6.3.0",
+    "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-whitelist": "^1.3.4",
     "nodejs-mobile-cordova": "^0.4.2"
@@ -19,7 +20,8 @@
     "plugins": {
       "cordova-plugin-whitelist": {},
       "nodejs-mobile-cordova": {},
-      "cordova-plugin-console": {}
+      "cordova-plugin-console": {},
+      "cordova-plugin-android-permissions": {}
     },
     "platforms": [
       "android"
