--- a/build-extras.gradle
+++ b/build-extras.gradle
@@ -6,7 +6,7 @@ android {
         targetSdkVersion 26
 
         ndk {
-            abiFilters "x86"
+            abiFilters "armeabi-v7a", "arm64-v8a"
         }
     }
 }
