--- a/www/nodejs-project/package.json
+++ b/www/nodejs-project/package.json
@@ -10,6 +10,10 @@
   "license": "GPL-2.0+",
   "dependencies": {
     "node-addon-api": "^1.7.1",
-    "node-sword-interface": "^0.188.0"
+    "node-sword-interface": "^0.188.0",
+    "sqlite3": "^5.0.0",
+    "sequelize": "^5.21.6",
+    "umzug": "^2.3.0",
+    "fs-extra": "^9.0.1"
   }
 }
