--- a/www/nodejs-project/package.json
+++ b/www/nodejs-project/package.json
@@ -9,11 +9,12 @@
   "author": "Tobias Klein",
   "license": "GPL-2.0+",
   "dependencies": {
+    "fs-extra": "^9.0.1",
+    "iso-639-3": "^2.2.0",
     "node-addon-api": "^1.7.1",
     "node-sword-interface": "^0.188.0",
-    "sqlite3": "^5.0.0",
     "sequelize": "^5.21.6",
-    "umzug": "^2.3.0",
-    "fs-extra": "^9.0.1"
+    "sqlite3": "^5.0.0",
+    "umzug": "^2.3.0"
   }
 }
