--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cordova-android": "^6.3.0",
     "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-fullscreen": "^1.3.0",
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-whitelist": "^1.3.4",
     "nodejs-mobile-cordova": "^0.4.2"
@@ -23,7 +24,8 @@
       "nodejs-mobile-cordova": {},
       "cordova-plugin-console": {},
       "cordova-plugin-android-permissions": {},
-      "cordova-plugin-is-debug": {}
+      "cordova-plugin-is-debug": {},
+      "cordova-plugin-fullscreen": {}
     },
     "platforms": [
       "android"
