--- a/build-extras.gradle
+++ b/build-extras.gradle
@@ -1,9 +1,10 @@
-ext.cdvMinSdkVersion=24
+ext.cdvMinSdkVersion=29
+ext.cdvReleaseSigningPropertiesFile="../../release-signing.properties"
 
 android {
     defaultConfig {
-        minSdkVersion 24
-        targetSdkVersion 26
+        minSdkVersion 29
+        targetSdkVersion 29
 
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a"
