--- a/build-extras.gradle
+++ b/build-extras.gradle
@@ -1,9 +1,12 @@
-ext.cdvMinSdkVersion=29
+ext.cdvMinSdkVersion=21
+ext.cdvCompileSdkVersion=26
+ext.cdvTargetSdkVersion=29
 ext.cdvReleaseSigningPropertiesFile="../../release-signing.properties"
 
 android {
     defaultConfig {
-        minSdkVersion 29
+        minSdkVersion 21
+        compileSdkVersion 26
         targetSdkVersion 29
 
         ndk {
