--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cordova-plugin-fullscreen": "^1.3.0",
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-whitelist": "^1.3.4",
-    "nodejs-mobile-cordova": "^0.4.2"
+    "nodejs-mobile-cordova": "^0.4.2",
+    "cordova-plugin-insomnia": "~4.3.0"
   },
   "cordova": {
     "plugins": {
@@ -25,7 +26,8 @@
       "cordova-plugin-console": {},
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-is-debug": {},
-      "cordova-plugin-fullscreen": {}
+      "cordova-plugin-fullscreen": {},
+      "cordova-plugin-insomnia": {}
     },
     "platforms": [
       "android"
