--- a/www/nodejs-project/package.json
+++ b/www/nodejs-project/package.json
@@ -9,13 +9,14 @@
   "author": "Tobias Klein",
   "license": "GPL-2.0+",
   "dependencies": {
+    "@sentry/node": "^6.0.1",
     "conf": "^7.1.2",
     "fs-extra": "^9.0.1",
     "iso-639-3": "^2.2.0",
     "node-addon-api": "^1.7.1",
     "node-sword-interface": "^0.195.0",
     "sequelize": "^5.21.6",
-    "sqlite3": "^5.0.1",
+    "sqlite3": "^5.0.0",
     "umzug": "^2.3.0"
   }
 }
