--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "author": "Tobias Klein",
   "license": "GPL-2.0+",
   "dependencies": {
-    "cordova-android": "^6.3.0",
+    "cordova-android": "^6.4.0",
     "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-fullscreen": "^1.3.0",
+    "cordova-plugin-insomnia": "~4.3.0",
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-whitelist": "^1.3.4",
-    "nodejs-mobile-cordova": "^0.4.2",
-    "cordova-plugin-insomnia": "~4.3.0"
+    "nodejs-mobile-cordova": "^0.4.2"
   },
   "cordova": {
     "plugins": {
