--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-fullscreen": "^1.3.0",
-    "cordova-plugin-insomnia": "~4.3.0",
+    "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-whitelist": "^1.3.4",
     "nodejs-mobile-cordova": "^0.4.2"
