--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ezra-project-cordova",
   "displayName": "Ezra Project",
-  "version": "0.17.0-Beta1",
+  "version": "0.17.0-Beta4",
   "description": "Ezra Project is a bible study software focussing on topical study based on keywords/tags.",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "cordova-android": "^6.4.0",
     "cordova-plugin-android-permissions": "^1.1.2",
+    "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-fullscreen": "^1.3.0",
     "cordova-plugin-insomnia": "^4.3.0",
@@ -27,7 +28,8 @@
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-is-debug": {},
       "cordova-plugin-fullscreen": {},
-      "cordova-plugin-insomnia": {}
+      "cordova-plugin-insomnia": {},
+      "cordova-plugin-app-version": {}
     },
     "platforms": [
       "android"
