--- a/www/nodejs-project/package.json
+++ b/www/nodejs-project/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ezra-project-cordova-node-backend",
+  "name": "ezra-bible-app-backend",
   "version": "0.17.1",
-  "description": "Ezra Project is a bible study software focussing on topical study based on keywords/tags",
+  "description": "Ezra Bible App is a Bible study tool focussing on topical study based on keywords/tags. This is the node-based backend used for the Cordova app.",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
