--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ezra-project"]
 	path = ezra-project
 	url = https://github.com/ezra-project/ezra-project.git
+[submodule "ezra-bible-app"]
+	path = ezra-bible-app
+	url = https://github.com/ezra-project/ezra-project.git
