--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ezra-bible-app",
   "displayName": "Ezra Bible App",
-  "version": "1.0.0",
+  "version": "1.1.0-Dev",
   "description": "Ezra Bible App is a Bible study tool focussing on topical study based on keywords/tags.",
   "main": "index.js",
   "scripts": {
