Temporarily disable release signing properties file in build-extras.gradle

--- a/build-extras.gradle
+++ b/build-extras.gradle
@@ -1,7 +1,7 @@
 ext.cdvMinSdkVersion=21
 ext.cdvCompileSdkVersion=29
 ext.cdvTargetSdkVersion=29
-ext.cdvReleaseSigningPropertiesFile="../../release-signing.properties"
+// ext.cdvReleaseSigningPropertiesFile="../../release-signing.properties"
 
 ext.postBuildExtras = {
     android.defaultConfig.ndk.abiFilters = ['armeabi-v7a', 'arm64-v8a']
