--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "GPL-2.0+",
   "dependencies": {
     "cordova-android": "^6.4.0",
+    "cordova-clipboard": "^1.3.0",
     "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-console": "^1.1.0",
@@ -29,7 +30,8 @@
       "cordova-plugin-is-debug": {},
       "cordova-plugin-fullscreen": {},
       "cordova-plugin-insomnia": {},
-      "cordova-plugin-app-version": {}
+      "cordova-plugin-app-version": {},
+      "cordova-clipboard": {}
     },
     "platforms": [
       "android"
