--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-fullscreen": "^1.3.0",
     "cordova-plugin-insomnia": "^4.3.0",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-whitelist": "^1.3.4",
     "nodejs-mobile-cordova": "^0.4.2"
@@ -31,7 +32,8 @@
       "cordova-plugin-fullscreen": {},
       "cordova-plugin-insomnia": {},
       "cordova-plugin-app-version": {},
-      "cordova-clipboard": {}
+      "cordova-clipboard": {},
+      "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
       "android"
