--- a/www/nodejs-project/package.json
+++ b/www/nodejs-project/package.json
@@ -13,6 +13,7 @@
     "conf": "^7.1.2",
     "fs-extra": "^9.0.1",
     "node-sword-interface": "^0.250.0",
+    "node-html-parser": "^5.2.0",
     "sequelize": "^5.22.4",
     "sqlite3": "^4.2.0",
     "umzug": "^2.3.0"
