Remove cordova-plugin-file

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
       "cordova-plugin-insomnia": {},
       "cordova-plugin-app-version": {},
       "cordova-clipboard": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "android"
