--- a/www/nodejs-project/package.json
+++ b/www/nodejs-project/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@sentry/node": "^6.0.1",
     "conf": "^7.1.2",
+    "crypto": "^1.0.1",
+    "dropbox": "^10.32.0",
     "fs-extra": "^9.0.1",
-    "node-sword-interface": "^0.253.0",
+    "isomorphic-fetch": "^3.0.0",
     "node-html-parser": "^5.2.0",
+    "node-sword-interface": "^0.253.0",
     "sequelize": "^5.22.4",
     "sqlite3": "^4.2.0",
     "umzug": "^2.3.0"
