--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-fullscreen": "^1.3.0",
+    "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-universal-links-plugin": "^1.2.1",
     "nodejs-mobile-cordova": "^0.4.2"
   },
   "cordova": {
@@ -34,7 +36,9 @@
       "cordova-plugin-app-version": {},
       "cordova-clipboard": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-universal-links-plugin": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android"
