--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-is-debug": "^1.0.0",
+    "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-universal-links-plugin": "^1.2.1",
     "nodejs-mobile-cordova": "^0.4.2"
@@ -38,7 +39,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-file": {},
       "cordova-universal-links-plugin": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "android"
