--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,4 @@ updates:
     ignore:
       - dependency-name: "sequelize"
       - dependency-name: "sqlite3"
+      - dependency-name: "@sentry/node"
