--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "cordova-plugin-fullscreen": "^1.3.0",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-insomnia": "^4.3.0",
-    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-keyboard": "git+https://github.com/itbeyond/cordova-plugin-ionic-keyboard.git#4d23674036efa37f176c52ab88b7cb819bb61cf5",
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-network-information": "^2.0.2",
+    "cordova-plugin-statusbar": "^3.0.0",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-universal-links-plugin": "^1.2.1",
     "nodejs-mobile-cordova": "^0.4.2"
@@ -40,7 +41,8 @@
       "cordova-plugin-file": {},
       "cordova-universal-links-plugin": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "android"
