--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
   "dependencies": {
     "cordova-android": "^6.4.0",
     "cordova-clipboard": "^1.3.0",
-    "cordova-plugin-android-permissions": "^1.1.2",
-    "cordova-plugin-app-version": "^0.1.12",
+    "cordova-plugin-android-permissions": "^1.1.5",
+    "cordova-plugin-app-version": "^0.1.14",
     "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-fullscreen": "^1.3.0",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-insomnia": "^4.3.0",
-    "cordova-plugin-ionic-keyboard": "git+https://github.com/itbeyond/cordova-plugin-ionic-keyboard.git#4d23674036efa37f176c52ab88b7cb819bb61cf5",
+    "cordova-plugin-ionic-keyboard": "git+https://github.com/itbeyond/cordova-plugin-ionic-keyboard.git",
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
-    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-plugin-whitelist": "^1.3.5",
     "cordova-universal-links-plugin": "^1.2.1",
     "nodejs-mobile-cordova": "^0.4.2"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "nodejs-mobile-cordova": {},
       "cordova-plugin-console": {},
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-is-debug": {},
@@ -42,7 +42,8 @@
       "cordova-universal-links-plugin": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "nodejs-mobile-cordova": {}
     },
     "platforms": [
       "android"
