--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
     "cordova-plugin-whitelist": "^1.3.5",
-    "cordova-universal-links-plugin": "^1.2.1",
-    "nodejs-mobile-cordova": "^0.4.2"
+    "nodejs-mobile-cordova": "^0.4.2",
+    "cordova-plugin-deeplinks": "~1.1.1"
   },
   "cordova": {
     "plugins": {
@@ -39,11 +39,11 @@
       "cordova-clipboard": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-file": {},
-      "cordova-universal-links-plugin": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-statusbar": {},
-      "nodejs-mobile-cordova": {}
+      "nodejs-mobile-cordova": {},
+      "cordova-plugin-deeplinks": {}
     },
     "platforms": [
       "android"
