--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ezra-bible-app",
   "displayName": "Ezra Bible App",
-  "version": "1.13.0",
+  "version": "1.14.0-Dev",
   "description": "Ezra Bible App is a Bible study tool focussing on topical study based on keywords/tags.",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,9 @@
     "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-app-version": "^0.1.14",
     "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-deeplinks": "~1.1.1",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-fonts": "^0.6.5",
     "cordova-plugin-fullscreen": "^1.3.0",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-insomnia": "^4.3.0",
@@ -24,8 +26,7 @@
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
     "cordova-plugin-whitelist": "^1.3.5",
-    "nodejs-mobile-cordova": "^0.4.2",
-    "cordova-plugin-deeplinks": "~1.1.1"
+    "nodejs-mobile-cordova": "^0.4.2"
   },
   "cordova": {
     "plugins": {
@@ -43,7 +44,8 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-statusbar": {},
       "nodejs-mobile-cordova": {},
-      "cordova-plugin-deeplinks": {}
+      "cordova-plugin-deeplinks": {},
+      "cordova-plugin-fonts": {}
     },
     "platforms": [
       "android"
