--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Tobias Klein",
   "license": "GPL-2.0+",
   "dependencies": {
-    "cordova-android": "^6.4.0",
+    "cordova": "^12.0.0",
+    "cordova-android": "^12.0.0",
     "cordova-clipboard": "^1.3.0",
     "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-app-version": "^0.1.14",
@@ -25,12 +26,10 @@
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
-    "cordova-plugin-whitelist": "^1.3.5",
-    "nodejs-mobile-cordova": "^0.4.2"
+    "@red-mobile/nodejs-mobile-cordova": "^3.3.1"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {},
       "cordova-plugin-console": {},
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-is-debug": {},
@@ -43,9 +42,9 @@
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-statusbar": {},
-      "nodejs-mobile-cordova": {},
       "cordova-plugin-deeplinks": {},
-      "cordova-plugin-fonts": {}
+      "cordova-plugin-fonts": {},
+      "@red-mobile/nodejs-mobile-cordova": {}
     },
     "platforms": [
       "android"
