--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Tobias Klein",
   "license": "GPL-2.0+",
   "dependencies": {
+    "@red-mobile/nodejs-mobile-cordova": "^3.4.1",
     "cordova": "^12.0.0",
     "cordova-android": "^13.0.0",
     "cordova-clipboard": "^1.3.0",
@@ -24,7 +25,7 @@
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
-    "@red-mobile/nodejs-mobile-cordova": "^3.4.1"
+    "cordova-plugin-device": "^3.0.0"
   },
   "cordova": {
     "plugins": {
@@ -42,7 +43,8 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-deeplinks": {},
       "cordova-plugin-fonts": {},
-      "@red-mobile/nodejs-mobile-cordova": {}
+      "@red-mobile/nodejs-mobile-cordova": {},
+      "cordova-plugin-device": {}
     },
     "platforms": [
       "android"
