--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
-    "cordova-plugin-device": "^3.0.0"
+    "cordova-plugin-device": "^3.0.0",
+    "cordova-plugin-inappbrowser": "6.0.0"
   },
   "cordova": {
     "plugins": {
