--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "Tobias Klein",
   "license": "GPL-2.0+",
   "dependencies": {
-    "@red-mobile/nodejs-mobile-cordova": "^3.4.1",
     "cordova": "^12.0.0",
     "cordova-android": "^13.0.0",
     "cordova-clipboard": "^1.3.0",
@@ -18,15 +17,16 @@
     "cordova-plugin-app-version": "^0.1.14",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-deeplinks": "~1.1.1",
+    "cordova-plugin-device": "^3.0.0",
     "cordova-plugin-fonts": "^0.6.5",
     "cordova-plugin-fullscreen": "^1.3.0",
+    "cordova-plugin-inappbrowser": "6.0.0",
     "cordova-plugin-insomnia": "^4.3.0",
-    "cordova-plugin-ionic-keyboard": "git+https://github.com/itbeyond/cordova-plugin-ionic-keyboard.git",
+    "cordova-plugin-ionic-keyboard": "github:itbeyond/cordova-plugin-ionic-keyboard",
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
-    "cordova-plugin-device": "^3.0.0",
-    "cordova-plugin-inappbrowser": "6.0.0"
+    "@red-mobile/nodejs-mobile-cordova": "github:tobias-klein/nodejs-mobile-cordova"
   },
   "cordova": {
     "plugins": {
@@ -44,11 +44,12 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-deeplinks": {},
       "cordova-plugin-fonts": {},
-      "@red-mobile/nodejs-mobile-cordova": {},
-      "cordova-plugin-device": {}
+      "cordova-plugin-device": {},
+      "@red-mobile/nodejs-mobile-cordova": {}
     },
     "platforms": [
       "android"
     ]
-  }
+  },
+  "devDependencies": {}
 }
