--- a/www/nodejs-project/package.json
+++ b/www/nodejs-project/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ezra-bible-app-backend",
-  "version": "1.16.0-Alfa",
+  "version": "1.16.1",
   "description": "Ezra Bible App is a Bible study tool focussing on topical study based on keywords/tags. This is the node-based backend used for the Cordova app.",
   "main": "cordova_main.js",
   "scripts": {
