Use the published version of @red-mobile/nodejs-mobile-cordova@3.4.2

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
-    "@red-mobile/nodejs-mobile-cordova": "github:tobias-klein/nodejs-mobile-cordova"
+    "@red-mobile/nodejs-mobile-cordova": "^3.4.2"
   },
   "cordova": {
     "plugins": {
