--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "Tobias Klein",
   "license": "GPL-2.0+",
   "dependencies": {
-    "cordova": "^12.0.0",
-    "cordova-android": "^13.0.0",
+    "cordova": "^13.0.0",
     "cordova-clipboard": "^1.3.0",
     "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-app-version": "^0.1.14",
@@ -51,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@red-mobile/nodejs-mobile-cordova": "github:tobias-klein/nodejs-mobile-cordova#3b569c399ae07635416c20ad18a2c4511d3bcc29"
+    "@red-mobile/nodejs-mobile-cordova": "github:tobias-klein/nodejs-mobile-cordova#3b569c399ae07635416c20ad18a2c4511d3bcc29",
+    "cordova-android": "^14.0.1"
   }
 }
