--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "cordova-clipboard": "^1.3.0",
     "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-app-version": "^0.1.14",
-    "cordova-plugin-deeplinks": "~1.1.1",
     "cordova-plugin-device": "^3.0.0",
     "cordova-plugin-fonts": "^0.6.5",
     "cordova-plugin-fullscreen": "^1.3.0",
     "cordova-plugin-inappbrowser": "6.0.0",
     "cordova-plugin-insomnia": "^4.3.0",
-    "cordova-plugin-ionic-keyboard": "github:itbeyond/cordova-plugin-ionic-keyboard",
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-statusbar": "^3.0.0"
@@ -38,13 +36,13 @@
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-deeplinks": {},
       "cordova-plugin-fonts": {},
       "cordova-plugin-device": {},
       "@red-mobile/nodejs-mobile-cordova": {},
       "cordova-plugin-customurlscheme": {
         "URL_SCHEME": "ezrabible"
-      }
+      },
+      "cordova-plugin-deeplinks": {}
     },
     "platforms": [
       "android",
@@ -52,9 +50,12 @@
     ]
   },
   "devDependencies": {
-    "@red-mobile/nodejs-mobile-cordova": "github:tobias-klein/nodejs-mobile-cordova#71e00c7",
+    "@red-mobile/nodejs-mobile-cordova": "github:tobias-klein/nodejs-mobile-cordova#2070c32",
     "cordova-android": "^14.0.1",
     "cordova-ios": "^7.1.0",
-    "cordova-plugin-customurlscheme": "^5.0.2"
+    "cordova-plugin-customurlscheme": "^5.0.2",
+    "cordova-plugin-deeplinks": "^1.1.1",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-ionic-keyboard": "github:itbeyond/cordova-plugin-ionic-keyboard"
   }
 }
