--- a/package.json
+++ b/package.json
@@ -10,25 +10,23 @@
   "author": "Tobias Klein",
   "license": "GPL-2.0+",
   "dependencies": {
+    "@red-mobile/nodejs-mobile-cordova": "github:tobias-klein/nodejs-mobile-cordova#2070c32",
     "cordova": "^13.0.0",
+    "cordova-android": "^14.0.1",
     "cordova-clipboard": "^1.3.0",
     "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-app-version": "^0.1.14",
+    "cordova-plugin-customurlscheme": "^5.0.2",
+    "cordova-plugin-deeplinks": "^1.1.1",
     "cordova-plugin-device": "^3.0.0",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-fonts": "^0.6.5",
     "cordova-plugin-fullscreen": "^1.3.0",
     "cordova-plugin-inappbrowser": "6.0.0",
     "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-is-debug": "^1.0.0",
     "cordova-plugin-network-information": "^2.0.2",
-    "cordova-plugin-statusbar": "^3.0.0",
-    "cordova-plugin-customurlscheme": "^5.0.2",
-    "cordova-plugin-deeplinks": "^1.1.1",
-    "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-ionic-keyboard": "github:itbeyond/cordova-plugin-ionic-keyboard",
-    "@red-mobile/nodejs-mobile-cordova": "github:tobias-klein/nodejs-mobile-cordova#2070c32",
-    "cordova-android": "^14.0.1",
-    "cordova-ios": "^7.1.0"
+    "cordova-plugin-statusbar": "^3.0.0"
   },
   "cordova": {
     "plugins": {
@@ -55,5 +53,9 @@
       "android",
       "ios"
     ]
+  },
+  "devDependencies": {
+    "cordova-ios": "^7.1.0",
+    "cordova-plugin-ionic-keyboard": "github:itbeyond/cordova-plugin-ionic-keyboard"
   }
 }
