--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@ www/nodejs-project/**
 !www/nodejs-project
 !www/nodejs-project/package.json
 !www/nodejs-project/patches
+!www/nodejs-project/patches/**
 
 release-signing.properties
