--- a/www/nodejs-project/package.json
+++ b/www/nodejs-project/package.json
@@ -14,9 +14,10 @@
     "dropbox": "^10.32.0",
     "fs-extra": "^9.0.1",
     "isomorphic-fetch": "^3.0.0",
-    "node-sword-interface": "^1.0.55",
+    "node-sword-interface": "^1.0.56",
     "sequelize": "^5.22.4",
     "sqlite3": "^4.2.0",
-    "umzug": "^2.3.0"
+    "umzug": "^2.3.0",
+    "patch-package": "^8.0.1"
   }
 }
