--- a/www/nodejs-project/package.json
+++ b/www/nodejs-project/package.json
@@ -17,7 +17,9 @@
     "node-sword-interface": "^1.0.56",
     "sequelize": "^5.22.4",
     "sqlite3": "^4.2.0",
-    "umzug": "^2.3.0",
+    "umzug": "^2.3.0"
+  },
+  "devDependencies": {
     "patch-package": "^8.0.1"
   }
 }
