--- a/www/nodejs-project/package.json
+++ b/www/nodejs-project/package.json
@@ -4,7 +4,8 @@
   "description": "Ezra Bible App is a Bible study tool focussing on topical study based on keywords/tags. This is the node-based backend used for the Cordova app.",
   "main": "cordova_main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "patch-package"
   },
   "author": "Tobias Klein",
   "license": "GPL-2.0+",
